--- a/libc/Makefile
+++ b/libc/Makefile
@@ -7,5 +7,20 @@ DEF_CFLAGS += -nostdinc -nostdlib
 DEF_CFLAGS += -I../include -I../arch/amd64 -I../include/sys
 
 
-default: .
-	$(CC) $(DEF_CFLAGS) -c *.c
+default: stdio gen locale libstubs arch string stdlib thread
+	cd stdio; make
+	cd gen; make
+	cd locale;make
+	cd libstubs;make
+	cd arch/amd64/string;make
+	cd string;make
+	cd stdlib;make
+	cd thread;make
+	ar r libc2.a stdio/*.o
+	ar r libc2.a gen/*.o
+	ar r libc2.a locale/*.o
+	ar r libc2.a libstubs/*.o
+	ar r libc2.a arch/amd64/string/*.o
+	ar r libc2.a string/*.o
+	ar r libc2.a stdlib/*.o
+	ar r libc2.a thread/*.o
