--- a/libc/libstubs/Makefile
+++ b/libc/libstubs/Makefile
@@ -1,23 +1,12 @@
-#	$OpenBSD: Makefile,v 1.8 2010/10/13 16:11:26 deraadt Exp $
+CC = gcc
+DEF_CFLAGS += -fno-builtin -Wall -Werror -Wredundant-decls -Wno-format -Wno-redundant-decls
+DEF_CFLAGS += $(call cc-option,$(CC),-fno-stack-protector,)
+DEF_CFLAGS += $(call cc-option,$(CC),-fgnu89-inline)
+DEF_CFLAGS += -Wstrict-prototypes -Wnested-externs -Wpointer-arith -Winline
+DEF_CFLAGS += -nostdinc -nostdlib
+DEF_CFLAGS += -I../include -I../arch/amd64 -I../include/sys
 
-.include <bsd.own.mk>
-LIB=    stubs
-SRCS=	db.c setlocale.c sha1.c sha2.c getgrent.c getpwent.c \
-	ethers.c getaddrinfo.c gethostnamadr.c getnetnamadr.c \
-	mbrtowc_sb.c vfprintf.c
-NOPIC=	Yes
-NOPROFILE=Yes
-NOMAN=	1
+OBJS := mbrtowc_sb.c
 
-CFLAGS+=-D__DBINTERFACE_PRIVATE -DSHA256_ONLY -UYP -I${LIBCSRCDIR}/include \
-	-DNO_LOG_BAD_DNS_RESPONSES -I${LIBCSRCDIR}/locale \
-	-I${LIBCSRCDIR}/stdio -DFLOATING_POINT
-
-LIBCSRCDIR=${.CURDIR}/../../../lib/libc
-
-.PATH: ${.CURDIR}/../../../lib/libc/hash
-.PATH: ${.CURDIR}/../../../lib/libc/gen
-.PATH: ${.CURDIR}/../../../lib/libc/net
-.PATH: ${.CURDIR}/../../../lib/libc/stdio
-
-.include <bsd.lib.mk>
+default: .
+	$(CC) $(DEF_CFLAGS) -c $(OBJS)
